@@ -2,7 +2,7 @@
 # Compile script for simple Java project
 
 echo "Compiling Java files..."
-javac --enable-preview --release 21 src/main/java/com/bootdev/httpserver/*.java -d out
+javac src/main/java/com/bootdev/httpserver/*.java -d out
 
 if [ $? -eq 0 ]; then
     echo "Compilation successful!"
@@ -10,4 +10,3 @@ else
     echo "Compilation failed!"
     exit 1
 fi
-
