@@ -2,4 +2,4 @@
 # Run script for simple Java project
 
 echo "Running HTTPServerMain..."
-java --enable-preview -cp out com.bootdev.httpserver.HTTPServerMain
+java -cp out com.bootdev.httpserver.HTTPServerMain
